# chess

./: .gitignore  CMakeLists.txt  LICENCE  README.md
include/: bishop.hpp  board.hpp  engine.hpp  figure.hpp  game.hpp  king.hpp  knight.hpp  modes.hpp  pawn.hpp  queen.hpp  rook.hpp
include/figures/: bishop.hpp  king.hpp  queen.hpp  rook.hpp
include/ui/: castling.hpp  choice_menu.hpp  create_puzzle.hpp  end_game.hpp  events.hpp  menu.hpp  puzzle.hpp  save.hpp  textures.hpp  ui_board.hpp  ui_figures.hpp
puzzles/: puzzle_001.fen  puzzle_002.fen  puzzle_003.fen  puzzle_004.fen  puzzle_005.fen  puzzle_006.fen  puzzle_007.fen  puzzle_008.fen  puzzle_009.fen  puzzle_010.fen
src/: board.cpp  engine.cpp  figure.cpp  game.cpp  main.cpp  modes.cpp
src/figures/: bishop.cpp  king.cpp  knight.cpp  pawn.cpp  queen.cpp  rook.cpp
src/ui/: castling.cpp  choice_menu.cpp  create_puzzle.cpp  end_game.cpp  events.cpp  menu.cpp  puzzle.cpp  save.cpp  textures.cpp  ui_board.cpp  ui_figures.cpp
